WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122999
Pass VM instead of JSGlobalObject to JSONObject constructor.
https://bugs.webkit.org/show_bug.cgi?id=122999
Summary
Pass VM instead of JSGlobalObject to JSONObject constructor.
Andreas Kling
Reported
2013-10-17 15:39:28 PDT
Busy work.
Attachments
Patch
(4.00 KB, patch)
2013-10-17 15:40 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-10-17 15:40:30 PDT
Created
attachment 214523
[details]
Patch
Geoffrey Garen
Comment 2
2013-10-17 15:42:26 PDT
Comment on
attachment 214523
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-10-17 16:34:11 PDT
Comment on
attachment 214523
[details]
Patch Clearing flags on attachment: 214523 Committed
r157614
: <
http://trac.webkit.org/changeset/157614
>
WebKit Commit Bot
Comment 4
2013-10-17 16:34:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug