Pass VM instead of JSGlobalObject to JSONObject constructor. <https://webkit.org/b/122999>

JSONObject was only use the JSGlobalObject to grab at the VM.
Dodge a few loads by passing the VM directly instead.

Reviewed by Geoffrey Garen.

* runtime/JSONObject.cpp:
(JSC::JSONObject::JSONObject):
(JSC::JSONObject::finishCreation):
* runtime/JSONObject.h:
(JSC::JSONObject::create):


Canonical link: https://commits.webkit.org/141075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157614 268f45cc-cd09-0410-ab3c-d52691b4dbfc